# boolector

./: .gitignore  .gitmodules  LICENSE.txt  boolector.patch  btor2tools.patch  build.sh  minisat.patch  package-pypi.sh  picosat-version
.github/workflows/: package.yml
npmjs/: README.md  package-in.json  prepare.py
npmjs/lib/: api.d.ts  api.js
pypi/: .gitignore  README.md  pdm_build.py  pyproject.toml  setup.py
pypi/src/yowasp_boolector/: __init__.py
