[build-system]
requires = ["setuptools~=67.0", "setuptools-scm>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "yowasp-boolector"
description = "boolector Satisfiability Modulo Theories (SMT) solver"
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "ISC"}
dynamic = ["version"]

dependencies = [
	"importlib_resources; python_version<'3.9'",
	"yowasp-runtime~=1.12",
]

[project.scripts]
yowasp-boolector = "yowasp_boolector:_run_boolector_argv"

# Dummy section required, otherwise getting a setuptools_scm Configuration
# will fail.
[tool.setuptools_scm]

[tool.setuptools.package-data]
yowasp_boolector = [
	"*.wasm"
]
