[build-system]
requires = ["setuptools~=67.0", "setuptools_scm~=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "yowasp-boolector"
description = "boolector Satisfiability Modulo Theories (SMT) solver"
readme = "README.md"
authors = [{name = "William D. Jones", email = "thor0505@comcast.net"}]
license = {text = "ISC"}
classifiers = [
	"License :: OSI Approved :: ISC License (ISCL)"
]

dependencies = [
	"importlib_resources; python_version<'3.9'",
	"yowasp-runtime~=1.12",
]

[project.scripts]
yowasp-boolector = "yowasp_boolector:_run_boolector_argv"

[project.urls]
"Homepage" = "https://yowasp.org/"
"Source Code" = "https://github.com/YoWASP/boolector"
"Bug Tracker" = "https://github.com/YoWASP/boolector/issues"

[tool.setuptools.package-data]
yowasp_boolector = ["*.wasm"]
